Made the side menu Interactive

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 		<div class="fullHeight white" id="sectionMenu">
 			<div class="" id="appName">Health App</div>
 			<div class="sideMenuText" id="mainMenuText">Main Menu</div>
-			<div class="displayFlexLeft sideMenuOptions sideMenuText active">
+			<div class="displayFlexLeft sideMenuOptions sideMenuText active" id="sideMenuPing" onclick="selectPings()">
 				<img src="./css/icons/mail.svg" />
 				<span>Pings</span>
 			</div>
-			<div class="displayFlexLeft sideMenuOptions sideMenuText">
-				<img src="./css/icons/mail_grey.svg" />
+			<div class="displayFlexLeft sideMenuOptions sideMenuText" id="sideMenuStudent" onclick="selectStudent()">
+				<img src="./css/icons/user_grey.svg" />
 				<span>Students</span>
 			</div>
 		</div>
