Wrote the page header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,28 @@
 				<span>Students</span>
 			</div>
 		</div>
-		<div class="fullHeight blue" id="sectionBody">dd</div>
+		<div class="fullHeight blue" id="sectionBody">
+			<div class="white" id="sectionBodyHeader">
+				<div class="col m6 l6 fullHeight">
+					<div class="" id="pingName">Pings</div>
+				</div>
+				<div class="col m6 l6 fullHeight displayFlexRight">
+					<img src="./css/icons/bell.svg">
+					<div class="" id="adminBtnBody">
+						<div  class="col m4 l4 fullHeight displayFlexLeft">
+							<img src="./css/icons/unaab_logo.svg" id="funaabLogo">
+						</div>
+						<div class="col m8 l8 fullHeight displayFlexLeft" id="adminText">
+							Admin
+							<img src="./css/icons/arrow_down.svg" id="adminTextArrow">
+						</div>
+						<!-- <div class="col m3 l3 fullHeight displayFlexLeft green">
+							<i class="fas fa-caret-down"></i>
+						</div> -->
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
