Implemented the selection of page to display

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="" id="pingName">Pings</div>
 				</div>
 				<div class="col m6 l6 fullHeight displayFlexRight">
-					<img src="./css/icons/bell.svg">
+					<img src="./css/icons/bell.svg" style="cursor: pointer">
 					<div class="" id="adminBtnBody">
 						<div  class="col m4 l4 fullHeight displayFlexLeft">
 							<img src="./css/icons/unaab_logo.svg" id="funaabLogo">
@@ -51,11 +51,12 @@
 							Admin
 							<img src="./css/icons/arrow_down.svg" id="adminTextArrow">
 						</div>
-						<!-- <div class="col m3 l3 fullHeight displayFlexLeft green">
-							<i class="fas fa-caret-down"></i>
-						</div> -->
 					</div>
 				</div>
+			</div>
+			<div class="green" id="sectionBodyContainer">
+				<div class="red body" id="pingsSection"></div>
+				<div class="yellow body" id="studentsSection"></div>
 			</div>
 		</div>
 	</section>
