Implemented the statistics section

--- a/index.html
+++ b/index.html
@@ -54,9 +54,59 @@
 					</div>
 				</div>
 			</div>
-			<div class="green" id="sectionBodyContainer">
-				<div class="red body" id="pingsSection"></div>
-				<div class="yellow body" id="studentsSection"></div>
+			<div class="" id="sectionBodyContainer">
+				<div class="body" id="pingsSection">
+					<!-- Statistics -->
+					<div class="displayFlex" id="statsSection">
+						<div class="white" id="statsBody">
+							<div class="col m9 l9 fullHeight">
+								<div class="" id="statsBodyName">Statistics</div>
+								<div class="" id="statsBodyStats">
+									<div class="col m3 l3 fullHeight">
+										<div class="col m4 l4 fullHeight displayFlex">
+											<img src="./css/icons/pingCount.svg">
+										</div>
+										<div class="col m8 l8 fullHeight">
+											<div class="pingsStatsCount">10</div>
+											<div class="pingsStatsCountText">Pings</div>
+										</div>
+									</div>
+									<div class="col m3 l3 fullHeight">
+										<div class="col m3 l3 fullHeight displayFlex">
+											<img src="./css/icons/repliedPing.svg">
+										</div>
+										<div class="col m9 l9 fullHeight">
+											<div class="pingsStatsCount">8</div>
+											<div class="pingsStatsCountText">Replied Pings</div>
+										</div>
+									</div>
+									<div class="col m3 l3 fullHeight">
+										<div class="col m4 l4 fullHeight displayFlex">
+											<img src="./css/icons/pingVideoCall.svg">
+										</div>
+										<div class="col m8 l8 fullHeight">
+											<div class="pingsStatsCount">5</div>
+											<div class="pingsStatsCountText">Video calls</div>
+										</div>
+									</div>
+									<div class="col m3 l3 fullHeight">
+										<div class="col m4 l4 fullHeight displayFlex">
+											<img src="./css/icons/pingStudents.svg">
+										</div>
+										<div class="col m8 l8 fullHeight">
+											<div class="pingsStatsCount">49</div>
+											<div class="pingsStatsCountText">Students</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col m3 l3 fullHeight"></div>
+						</div>
+					</div>
+				</div>
+				<div class="body" id="studentsSection">
+					<div>Student Section</div>
+				</div>
 			</div>
 		</div>
 	</section>
