Implemented the pings side menu

--- a/index.html
+++ b/index.html
@@ -103,6 +103,97 @@
 							<div class="col m3 l3 fullHeight"></div>
 						</div>
 					</div>
+					<!-- Pings details -->
+					<div class="" id="pingDetailsSection">
+						<div class="pingDetailsSection fullHeight" id="allPingsSection">
+							<div class="white" id="pingDetailsBody">
+								<div class="" id="pingDetailsHeader">
+									<div class="white" id="pingDetailsHeaderBody">
+										<div class="col m7 l7 fullHeight" id="">
+											Latest Ping
+										</div>
+										<div class="col m5 l5 fullHeight"></div>
+									</div>
+									<div class="displayFlex" id="pingDetailsHeaderRuleBody">
+										<div id="pingDetailsHeaderRule"></div>
+									</div>
+								</div>
+								<div class="" id="pingDetails">
+									<div class="white" id="pingDetailsHeaderBody">
+										<div class="col m7 l7 fullHeight" id="">
+											All Pings
+										</div>
+										<div class="col m5 l5 fullHeight">
+											<div class="" id="pingDetailFilter">
+												<div class="col m8 l8 fullHeight displayFlexLeft" id="adminText">
+													Filter
+													<img src="./css/icons/arrow_down.svg" id="pingDetailFilterArrow">
+												</div>
+											</div>
+										</div>
+									</div>
+									<!-- Ping Info's below -->
+									<div class="" id="pingDetail">
+										<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
+											<img src="./images/profile1.jpg">
+										</div>
+										<div class="col m9 l9 fullHeight">
+											<div class="" id="pingDetailTextBodyOne">
+												<div class="fullHeight col m8 l8 pingDetailName">Wendy Flores</div>
+												<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
+											</div>
+											<div class="pingDetailTextBodyTwo">
+												Hello There, I'm currently at the school gate with my friend and ...
+											</div>
+										</div>
+									</div>
+									<div class="" id="pingDetail">
+										<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
+											<img src="./images/profile2.jpg">
+										</div>
+										<div class="col m9 l9 fullHeight">
+											<div class="" id="pingDetailTextBodyOne">
+												<div class="fullHeight col m8 l8 pingDetailName">Supreme Design</div>
+												<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
+											</div>
+											<div class="pingDetailTextBodyTwo">
+												Hello There, I'm currently at the school gate with my friend and ...
+											</div>
+										</div>
+									</div>
+									<div class="" id="pingDetail">
+										<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
+											<img src="./images/profile4.jpeg">
+										</div>
+										<div class="col m9 l9 fullHeight">
+											<div class="" id="pingDetailTextBodyOne">
+												<div class="fullHeight col m8 l8 pingDetailName">Andy Cole</div>
+												<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
+											</div>
+											<div class="pingDetailTextBodyTwo">
+												Hello There, I'm currently at the school gate with my friend and ...
+											</div>
+										</div>
+									</div>
+									<div class="" id="pingDetail">
+										<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
+											<img src="./images/profile1.jpg">
+										</div>
+										<div class="col m9 l9 fullHeight">
+											<div class="" id="pingDetailTextBodyOne">
+												<div class="fullHeight col m8 l8 pingDetailName">Name Blank</div>
+												<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
+											</div>
+											<div class="pingDetailTextBodyTwo">
+												Hello There, I'm currently at the school gate with my friend and ...
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="pingDetailsSection fullHeight brown" id="infoSection"></div>
+					</div>
 				</div>
 				<div class="body" id="studentsSection">
 					<div>Student Section</div>
