Wrote the Latest Ping section

--- a/index.html
+++ b/index.html
@@ -192,7 +192,36 @@
 								</div>
 							</div>
 						</div>
-						<div class="pingDetailsSection fullHeight brown" id="infoSection"></div>
+						<div class="pingDetailsSection fullHeight" id="infoSection">
+							<div class="" id="infoSectionLatestPingContainer">
+								<div class="white" id="infoSectionLatestPingBody">
+									<div class="fullHeight col m2 l2 displayFlexTop">
+										<img src="./images/profile1.jpg" id="latestPingImage">
+									</div>
+									<div class="fullHeight col m10 l10">
+										<div class="" id="latestPingSectionOne">
+											<div class="col m8 l8 fullHeight">
+												<div class="latestPinger" id="latestPingerName">Wendy Flores</div>
+												<div class="latestPinger" id="latestPingerClinicNo">ST053108</div>
+												<div class="latestPinger" id="latestPingerTime">10:52AM</div>
+											</div>
+											<div class="col m4 l4 fullHeight displayFlex">
+												<div class="displayFlex" id="videoCallBtn">
+													Video Call
+													<img src="./css/icons/video_call.svg" style="padding-left: 1em;">
+												</div>
+											</div>
+										</div>
+										<div class="displayFlexColumn" id="latestPingSectionTwo">
+											<div class="" id="latestPingMessage">
+												Hello there, I have a problem sleeping at night. Lastnight, I had problem with my stomach and it disturbed me overnight. I’m scared I have a problem with my stomach and I’m really worried. Looking forward to hearing from you. Regards
+											</div>
+											<div class="" id="latestPingMessageOverlay"></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="body" id="studentsSection">
