Completely wrote pings section

--- a/index.html
+++ b/index.html
@@ -221,6 +221,91 @@
 									</div>
 								</div>
 							</div>
+							<div class="displayFlex" id="infoSectionRecntlyContainer">
+								<div class="white" id="infoSectionRecntlyBody">
+									<div class="displayFlex">
+										<div class="" id="infoSectionRecntlyHeader">
+											<div class="col m6 l6 fullHeight" id="recentlyAddedToText">
+												Recently Added to
+											</div>
+											<div class="col m6 l6 fullHeight">
+												<input type="text" class="browser-default" id="recentlyAddedToSearch">
+											</div>
+										</div>
+									</div>
+									<div class="" id="recentlyAddedTable">
+										<div class="displayFlex">
+											<div class="" id="recentlyAddedTableHeader">
+												<div class="col m4 l4 fullHeight displayFlexLeft">Student's name</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">Clinic number</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">Level</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">Phone number</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">Sex</div>
+											</div>
+										</div>
+										<div class="displayFlex recentAddedBody">
+											<div class="" id="recentlyAddedTableBody">
+												<div class="col m4 l4 fullHeight displayFlexLeft">
+													<img src="./images/profile2.jpg" class="recentlyAddedUserImage">
+													<span class="recentlyAddedUserName">Savannah Warren</span>
+												</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
+											</div>
+										</div>
+										<div class="displayFlex recentAddedBody">
+											<div class="" id="recentlyAddedTableBody">
+												<div class="col m4 l4 fullHeight displayFlexLeft">
+													<img src="./images/profile1.jpg" class="recentlyAddedUserImage">
+													<span class="recentlyAddedUserName">Jenny Cooper</span>
+												</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
+											</div>
+										</div>
+										<div class="displayFlex recentAddedBody">
+											<div class="" id="recentlyAddedTableBody">
+												<div class="col m4 l4 fullHeight displayFlexLeft">
+													<img src="./images/profile4.jpeg" class="recentlyAddedUserImage">
+													<span class="recentlyAddedUserName">Jerome Robertson</span>
+												</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
+											</div>
+										</div>
+										<div class="displayFlex recentAddedBody">
+											<div class="" id="recentlyAddedTableBody">
+												<div class="col m4 l4 fullHeight displayFlexLeft">
+													<img src="./images/profilePicture.png" class="recentlyAddedUserImage">
+													<span class="recentlyAddedUserName">Dianne Hawkins</span>
+												</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
+											</div>
+										</div>
+										<div class="displayFlex recentAddedBody">
+											<div class="" id="recentlyAddedTableBody">
+												<div class="col m4 l4 fullHeight displayFlexLeft">
+													<img src="./images/profile2.jpg" class="recentlyAddedUserImage">
+													<span class="recentlyAddedUserName">Judith Steward</span>
+												</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
+												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
+												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
