Disabled view on mpbile devices

--- a/index.html
+++ b/index.html
@@ -315,5 +315,8 @@
 			</div>
 		</div>
 	</section>
+	<section class="displayFlex" id="disableMobile">
+		<h4>Please only view this site on a computer</h4>
+	</section>
 </body>
 </html>
