Added all students section

--- a/index.html
+++ b/index.html
@@ -309,8 +309,95 @@
 						</div>
 					</div>
 				</div>
+
+				<!-- ---------------------------STUDENT SECION------------------------------- -->
 				<div class="body" id="studentsSection">
-					<div>Student Section</div>
+					<div class="col m5 l5 fullHeight displayFlex">
+						<div class="white" id="studentsAllStudentsSection">
+							<div class="" id="studentsAllSectionHeader">
+								<div class="col m7 l7 fullHeight" id="studentsSectionHeadetText">All Students</div>
+								<div class="col m5 l5 fullHeight displayFlexRight">
+									<div class="" id="studentsSectionFilter">
+										<div class="col m8 l8 fullHeight displayFlexLeft" id="adminText">
+											Filter
+											<img src="./css/icons/arrow_down.svg" id="pingDetailFilterArrow">
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="displayFlex" id="studentSectionSearchBody">
+								<input type="text" class="browser-default" id="studentSectionSearch">
+							</div>
+							<div class="" id="studentSectionsBody">
+								<div class="studentSectionDiv">
+									<div class="col m2 l2 fullHeight displayFlex">
+										<img src="./images/profile2.jpg" class="studentsSectionImages">
+									</div>
+									<div class="col m7 l7 fullHeight">
+										<div class="halfHeight studentsSectionName">Wade Cooper</div>
+										<div class="halfHeight studentsSectionNumber">08133282428</div>
+									</div>
+									<div class="col m3 l3 fullHeight">
+										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
+										<div class="halfHeight studentsSectionLevel">200L</div>
+									</div>
+								</div>
+								<div class="studentSectionDiv">
+									<div class="col m2 l2 fullHeight displayFlex">
+										<img src="./images/profile1.jpg" class="studentsSectionImages">
+									</div>
+									<div class="col m7 l7 fullHeight">
+										<div class="halfHeight studentsSectionName">Darrel Miles</div>
+										<div class="halfHeight studentsSectionNumber">07029282437</div>
+									</div>
+									<div class="col m3 l3 fullHeight">
+										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
+										<div class="halfHeight studentsSectionLevel">200L</div>
+									</div>
+								</div>
+								<div class="studentSectionDiv">
+									<div class="col m2 l2 fullHeight displayFlex">
+										<img src="./images/profile4.jpeg" class="studentsSectionImages">
+									</div>
+									<div class="col m7 l7 fullHeight">
+										<div class="halfHeight studentsSectionName">Jennie Fox</div>
+										<div class="halfHeight studentsSectionNumber">08133282428</div>
+									</div>
+									<div class="col m3 l3 fullHeight">
+										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
+										<div class="halfHeight studentsSectionLevel">200L</div>
+									</div>
+								</div>
+								<div class="studentSectionDiv">
+									<div class="col m2 l2 fullHeight displayFlex">
+										<img src="./images/profile2.jpg" class="studentsSectionImages">
+									</div>
+									<div class="col m7 l7 fullHeight">
+										<div class="halfHeight studentsSectionName">Wade Cooper</div>
+										<div class="halfHeight studentsSectionNumber">08133282428</div>
+									</div>
+									<div class="col m3 l3 fullHeight">
+										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
+										<div class="halfHeight studentsSectionLevel">200L</div>
+									</div>
+								</div>
+								<div class="studentSectionDiv">
+									<div class="col m2 l2 fullHeight displayFlex">
+										<img src="./images/profile4.jpeg" class="studentsSectionImages">
+									</div>
+									<div class="col m7 l7 fullHeight">
+										<div class="halfHeight studentsSectionName">Jennie Fox</div>
+										<div class="halfHeight studentsSectionNumber">08133282428</div>
+									</div>
+									<div class="col m3 l3 fullHeight">
+										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
+										<div class="halfHeight studentsSectionLevel">200L</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col m7 l7 fullHeight"></div>
 				</div>
 			</div>
 		</div>
