Added the profile section

--- a/index.html
+++ b/index.html
@@ -397,7 +397,23 @@
 							</div>
 						</div>
 					</div>
-					<div class="col m7 l7 fullHeight"></div>
+					<div class="col m7 l7 fullHeight">
+						<div class="" id="studentDetailsSection">
+							<div class="white" id="studentDetailProfileBody">
+								<div class="fullHeight col m3 l3 displayFlex">
+									<img src="./images/laptop.png" id="studentDetailProfilePicture">
+								</div>
+								<div class="fullHeight col m6 l6">
+									<div class="" id="studentDetailsName">Wade Cooper</div>
+									<div class="" id="studentDetailsClinicNo">ST054182</div>
+									<div class="" id="studentDetailsLevel">200L</div>
+								</div>
+								<div class="fullHeight col m3 l3" id="studentDetailsNumber">
+									08133272734
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
