completed the students page

--- a/index.html
+++ b/index.html
@@ -413,6 +413,47 @@
 								</div>
 							</div>
 						</div>
+						<div class="white" id="studentDetailsPingHistory">
+							<div class="" id="studentDetailsPingHistoryHeader">
+								<div class="col m6 l6 fullHeight" id="pingHistoryText">Ping History</div>
+								<div class="col m6 l6 fullHeight displayFlex">
+									<input type="text" class="browser-default" id="pingHistorySearch">
+								</div>
+							</div>
+							<div class="padLeft padRight">
+								<div class="" id="pingHistoryTableColumns">
+									<div class="col m1 l1 fullHeight displayFlex pingHistoryColumn">SN</div>
+									<div class="col m4 l4 fullHeight displayFlex pingHistoryColumn">Ping message</div>
+									<div class="col m4 l4 fullHeight displayFlex pingHistoryColumn">Date</div>
+									<div class="col m3 l3 fullHeight displayFlex pingHistoryColumn">Response</div>
+								</div>
+
+								<div class="" id="pingHistoryTableRows">
+									<div class="col m1 l1 fullHeight displayFlex pingHistoryColumn">1</div>
+									<div class="col m4 l4 fullHeight displayFlex pingHistoryColumn">I've been unable to sleep...</div>
+									<div class="col m4 l4 historyDate fullHeight displayFlex pingHistoryColumn">September 30, 2019 7:16PM</div>
+									<div class="col m3 l3 fullHeight displayFlex pingHistoryColumn">
+										<div class="historyResponseStatus replied displayFlex">Replied</div>
+									</div>
+								</div>
+								<div class="" id="pingHistoryTableRows">
+									<div class="col m1 l1 fullHeight displayFlex pingHistoryColumn">2</div>
+									<div class="col m4 l4 fullHeight displayFlex pingHistoryColumn">I've been unable to sleep...</div>
+									<div class="col m4 l4 historyDate fullHeight displayFlex pingHistoryColumn">September 30, 2019 7:16PM</div>
+									<div class="col m3 l3 fullHeight displayFlex pingHistoryColumn">
+										<div class="historyResponseStatus ignored displayFlex">Ignored</div>
+									</div>
+								</div>
+								<div class="" id="pingHistoryTableRows">
+									<div class="col m1 l1 fullHeight displayFlex pingHistoryColumn">3</div>
+									<div class="col m4 l4 fullHeight displayFlex pingHistoryColumn">I've been unable to sleep...</div>
+									<div class="col m4 l4 historyDate fullHeight displayFlex pingHistoryColumn">September 30, 2019 7:16PM</div>
+									<div class="col m3 l3 fullHeight displayFlex pingHistoryColumn">
+										<div class="historyResponseStatus replied displayFlex">Replied</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
