Corrected some errors

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 										</div>
 									</div>
 									<div class="" id="pingDetail">
-										<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
+										<div class="col m3 l3 fullHeight" id="pingDetailImageBody">
 											<img src="./images/profile1.jpg">
 										</div>
 										<div class="col m9 l9 fullHeight">
@@ -237,7 +237,7 @@
 										<div class="displayFlex">
 											<div class="" id="recentlyAddedTableHeader">
 												<div class="col m4 l4 fullHeight displayFlexLeft">Student's name</div>
-												<div class="col m3 l3 fullHeight displayFlexLeft">Clinic number</div>
+												<div class="col m3 l3 fullHeight displayFlex">Clinic number</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">Level</div>
 												<div class="col m3 l3 fullHeight displayFlexLeft">Phone number</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">Sex</div>
@@ -249,7 +249,7 @@
 													<img src="./images/profile2.jpg" class="recentlyAddedUserImage">
 													<span class="recentlyAddedUserName">Savannah Warren</span>
 												</div>
-												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
+												<div class="col m3 l3 fullHeight displayFlex">ST053108</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
 												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
@@ -261,7 +261,7 @@
 													<img src="./images/profile1.jpg" class="recentlyAddedUserImage">
 													<span class="recentlyAddedUserName">Jenny Cooper</span>
 												</div>
-												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
+												<div class="col m3 l3 fullHeight displayFlex">ST053108</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
 												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
@@ -273,8 +273,8 @@
 													<img src="./images/profile4.jpeg" class="recentlyAddedUserImage">
 													<span class="recentlyAddedUserName">Jerome Robertson</span>
 												</div>
-												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
-												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
+												<div class="col m3 l3 fullHeight displayFlex">ST053108</div>
+												<div class="col m1 l1 fullHeight displayFlex">100L</div>
 												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
 											</div>
@@ -285,8 +285,8 @@
 													<img src="./images/profilePicture.png" class="recentlyAddedUserImage">
 													<span class="recentlyAddedUserName">Dianne Hawkins</span>
 												</div>
-												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
-												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
+												<div class="col m3 l3 fullHeight displayFlex">ST053108</div>
+												<div class="col m1 l1 fullHeight displayFlex">100L</div>
 												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
 											</div>
@@ -297,8 +297,8 @@
 													<img src="./images/profile2.jpg" class="recentlyAddedUserImage">
 													<span class="recentlyAddedUserName">Judith Steward</span>
 												</div>
-												<div class="col m3 l3 fullHeight displayFlexLeft">ST053108</div>
-												<div class="col m1 l1 fullHeight displayFlexLeft">100L</div>
+												<div class="col m3 l3 fullHeight displayFlex">ST053108</div>
+												<div class="col m1 l1 fullHeight displayFlex">100L</div>
 												<div class="col m3 l3 fullHeight displayFlexLeft">07063111596</div>
 												<div class="col m1 l1 fullHeight displayFlexLeft">Male</div>
 											</div>
