Load pings data from server

--- a/index.html
+++ b/index.html
@@ -133,61 +133,22 @@
 										</div>
 									</div>
 									<!-- Ping Info's below -->
-									<div class="" id="pingDetail">
-										<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
-											<img src="./images/profile1.jpg">
-										</div>
-										<div class="col m9 l9 fullHeight">
-											<div class="" id="pingDetailTextBodyOne">
-												<div class="fullHeight col m8 l8 pingDetailName">Wendy Flores</div>
-												<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
+									<div class="" id="pingInfoSection">
+										<div class="" id="pingDetail">
+											<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
+												<img src="./images/profile1.jpg">
 											</div>
-											<div class="pingDetailTextBodyTwo">
-												Hello There, I'm currently at the school gate with my friend and ...
-											</div>
-										</div>
-									</div>
-									<div class="" id="pingDetail">
-										<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
-											<img src="./images/profile2.jpg">
-										</div>
-										<div class="col m9 l9 fullHeight">
-											<div class="" id="pingDetailTextBodyOne">
-												<div class="fullHeight col m8 l8 pingDetailName">Supreme Design</div>
-												<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
-											</div>
-											<div class="pingDetailTextBodyTwo">
-												Hello There, I'm currently at the school gate with my friend and ...
+											<div class="col m9 l9 fullHeight">
+												<div class="" id="pingDetailTextBodyOne">
+													<div class="fullHeight col m8 l8 pingDetailName">Wendy Flores</div>
+													<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
+												</div>
+												<div class="pingDetailTextBodyTwo">
+													Hello There, I'm currently at the school gate with my friend and ...
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="" id="pingDetail">
-										<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
-											<img src="./images/profile4.jpeg">
-										</div>
-										<div class="col m9 l9 fullHeight">
-											<div class="" id="pingDetailTextBodyOne">
-												<div class="fullHeight col m8 l8 pingDetailName">Andy Cole</div>
-												<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
-											</div>
-											<div class="pingDetailTextBodyTwo">
-												Hello There, I'm currently at the school gate with my friend and ...
-											</div>
-										</div>
-									</div>
-									<div class="" id="pingDetail">
-										<div class="col m3 l3 fullHeight" id="pingDetailImageBody">
-											<img src="./images/profile1.jpg">
-										</div>
-										<div class="col m9 l9 fullHeight">
-											<div class="" id="pingDetailTextBodyOne">
-												<div class="fullHeight col m8 l8 pingDetailName">Name Blank</div>
-												<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
-											</div>
-											<div class="pingDetailTextBodyTwo">
-												Hello There, I'm currently at the school gate with my friend and ...
-											</div>
-										</div>
+										<!-- More ping details are added here -->
 									</div>
 								</div>
 							</div>
