Renderes ping and implemented automatic load of pings on scrolls

--- a/index.html
+++ b/index.html
@@ -134,21 +134,25 @@
 									</div>
 									<!-- Ping Info's below -->
 									<div class="" id="pingInfoSection">
-										<div class="" id="pingDetail">
-											<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
-												<img src="./images/profile1.jpg">
-											</div>
-											<div class="col m9 l9 fullHeight">
-												<div class="" id="pingDetailTextBodyOne">
-													<div class="fullHeight col m8 l8 pingDetailName">Wendy Flores</div>
-													<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
+										<div id="allPingDetails">
+											<div class="" id="pingDetail">
+												<div class="col m3 l3 fullHeight center" id="pingDetailImageBody">
+													<img src="./images/profile1.jpg">
 												</div>
-												<div class="pingDetailTextBodyTwo">
-													Hello There, I'm currently at the school gate with my friend and ...
+												<div class="col m9 l9 fullHeight">
+													<div class="" id="pingDetailTextBodyOne">
+														<div class="fullHeight col m8 l8 pingDetailName">Wendy Flores</div>
+														<div class="fullHeight col m4 l4 pingDetailTime">10:52AM</div>
+													</div>
+													<div class="pingDetailTextBodyTwo">
+														Hello There, I'm currently at the school gate with my friend and ...
+													</div>
 												</div>
 											</div>
+											<!-- More ping details are added here -->
 										</div>
-										<!-- More ping details are added here -->
+										<!-- Observer for intersection observer API -->
+										<div id="observer">Welcome</div>
 									</div>
 								</div>
 							</div>
